syntax = "proto3";

option csharp_namespace = "ReLiveWP.Backend.DeviceRegistration";

package device_registration;

service DeviceRegistration {
  rpc RegisterDevice (DeviceRegistrationRequest) returns (DeviceRegistrationResponse);
}

message DeviceRegistrationRequest {
  string certificateSubject = 1;

  string osVersion = 2;
  string locale = 3;
  string activationCode = 4;

  optional string deviceManufacturer = 5;
  optional string deviceModel = 6;
  optional string deviceUniqueId = 7;
  optional string deviceOperator = 8;
  optional string deviceIMEI = 9;
}

message DeviceRegistrationResponse {
  bool succeeded = 1;
  bool wasAlreadyRegistered = 2;
}
